CB-28: add profile data view resources & modified scribe setting and documentation
