# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\ForgotPasswordController;
+use App\Http\Controllers\ProfileController;
 
 /*
 |--------------------------------------------------------------------------
@@ -20,3 +21,8 @@ Route::post('signup', [AuthController::class, 'signup'])->name('page.signup');
 Route::post('login', [ AuthController::class, 'login'])->name('login');
 Route::post('reset-password-link', [ForgotPasswordController::class, 'sendResetLinkEmail']);
 Route::post('reset-password', [ForgotPasswordController::class, 'resetPassword']);
+
+//profile routes
+Route::group(['prefix' => 'profile', 'middleware'=> 'auth:api'], function(){
+    Route::get('data', [ProfileController::class, 'getProfileData'])->name('profile.get-data');
+});
